@@ -133,22 +133,30 @@ public class BackupManagerElasticSearch extends BackupManager {
   }
 
   @Override
-  public List<GetBackupStateResponseDto> getBackups() {
-    final GetSnapshotsRequest snapshotsStatusRequest =
+  public List<GetBackupStateResponseDto> getBackups(final boolean verbose) {
+    GetSnapshotsRequest snapshotsStatusRequest =
         new GetSnapshotsRequest()
             .repository(getRepositoryName())
             .snapshots(new String[] {Metadata.SNAPSHOT_NAME_PREFIX + "*"})
-            // it looks like sorting as well as size/offset are not working, need to sort
-            // additionally before return
-            .sort(GetSnapshotsRequest.SortBy.START_TIME)
-            .order(SortOrder.DESC);
+            .verbose(verbose);
+    if (verbose) {
+      snapshotsStatusRequest =
+          snapshotsStatusRequest
+              // it looks like sorting as well as size/offset are not working, need to sort
+              // additionally before return
+              .sort(GetSnapshotsRequest.SortBy.START_TIME)
+              .order(SortOrder.DESC);
+    }
     final GetSnapshotsResponse response;
     try {
       response = esClient.snapshot().get(snapshotsStatusRequest, RequestOptions.DEFAULT);
-      final List<SnapshotInfo> snapshots =
-          response.getSnapshots().stream()
-              .sorted(Comparator.comparing(SnapshotInfo::startTime).reversed())
-              .collect(toList());
+      List<SnapshotInfo> snapshots = response.getSnapshots();
+      if (verbose) {
+        snapshots =
+            snapshots.stream()
+                .sorted(Comparator.comparing(SnapshotInfo::startTime).reversed())
+                .toList();
+      }
 
       final LinkedHashMap<Long, List<SnapshotInfo>> groupedSnapshotInfos =
           snapshots.stream()
@@ -156,7 +164,9 @@ public class BackupManagerElasticSearch extends BackupManager {
                   groupingBy(
                       si -> {
                         final Metadata metadata =
-                            objectMapper.convertValue(si.userMetadata(), Metadata.class);
+                            Metadata.extractFromMetadataOrName(
+                                Metadata.fromObjectMapper(objectMapper, si.userMetadata()),
+                                si.snapshotId().getName());
                         Long backupId = metadata.getBackupId();
                         // backward compatibility with v. 8.1
                         if (backupId == null) {
@@ -355,7 +365,9 @@ public class BackupManagerElasticSearch extends BackupManager {
     final GetBackupStateResponseDto response = new GetBackupStateResponseDto(backupId);
 
     final Metadata metadata =
-        objectMapper.convertValue(snapshots.get(0).userMetadata(), Metadata.class);
+        Metadata.extractFromMetadataOrName(
+            Metadata.fromObjectMapper(objectMapper, snapshots.getFirst().userMetadata()),
+            snapshots.getFirst().snapshotId().getName());
     final Integer expectedSnapshotsCount = metadata.getPartCount();
     if (snapshots.size() == expectedSnapshotsCount
         && snapshots.stream().map(SnapshotInfo::state).allMatch(SUCCESS::equals)) {
@@ -377,9 +389,11 @@ public class BackupManagerElasticSearch extends BackupManager {
     for (final SnapshotInfo snapshot : snapshots) {
       final GetBackupStateResponseDetailDto detail = new GetBackupStateResponseDetailDto();
       detail.setSnapshotName(snapshot.snapshotId().getName());
-      detail.setStartTime(
-          OffsetDateTime.ofInstant(
-              Instant.ofEpochMilli(snapshot.startTime()), ZoneId.systemDefault()));
+      if (snapshot.startTime() > 0) {
+        detail.setStartTime(
+            OffsetDateTime.ofInstant(
+                Instant.ofEpochMilli(snapshot.startTime()), ZoneId.systemDefault()));
+      }
       if (snapshot.shardFailures() != null) {
         detail.setFailures(
             snapshot.shardFailures().stream()
